<resources>
    <!--공통 스트링-->
    <string name="app_name">Mountie</string>
    <string name="main">mountie</string>
    <string name="loading">로딩중입니다. </string>
    <string name="record">기록</string>
    <string name="map">맵</string>
    <string name="dashboard">대시 보드</string>
    <string name="search">산 이름을 입력하세요.</string>
    <string name="map_failure_message">등산로 정보를 가져오는데 실패했습니다. 인터넷 연결을 확인해주세요.</string>
    <string name="map_success_message">등산로 길 정보 가져오기 성공!</string>
    <string name="start">시작</string>
    <string name="backbutton">\'뒤로\' 버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="distance">총 거리</string>
    <string name="time">총 시간</string>
    <string name="avgSpeed">평균 속도</string>
    <string name="maxAltitude">최고 고도</string>
    <string name="checkRecord">등산기록을 확인해보세요!</string>

    <!-- fragment_statistics.xml -->
    <string name="start_to_end" translatable="false">-</string>
    <string name="result_txt_view">RESULT : </string>
    <string name="period_txt_view">PERIOD : </string>
    <string name="total_unit_label">COUNT</string>
    <!-- arrays.xml : spinner items -->
    <string name="arrays_week">WEEK</string>
    <string name="arrays_month">MONTH</string>
    <string name="arrays_custom">CUSTOM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchMT">산 검색</string>

    <!-- fragment_statistics.xml -->
    <string name="Mountie">마운티에서</string>
    <string name="total">총</string>
    <string name="timeInit">00:00</string>
    <string name="walk">걸었습니다!</string>
    <string name="level">난이도</string>
    <string name="between_distance">구간거리</string>
    <string name="upspeed">상행속도</string>
    <string name="downspeed">하행속도</string>

</resources>
